Add types definition

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "superagent-authorization",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Authorization plugin for superagent",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
   },
